@@ -60,6 +60,7 @@ RANGE = "range"
 REPEAT = "repeat"
 REPEAT_ONE = "repeat_one"
 SUBPATTERN = "subpattern"
+MIN_REPEAT_ONE = "min_repeat_one"
 
 # positions
 AT_BEGINNING = "at_beginning"
@@ -120,7 +121,8 @@ OPCODES = [
     RANGE,
     REPEAT,
     REPEAT_ONE,
-    SUBPATTERN
+    SUBPATTERN,
+    MIN_REPEAT_ONE
 
 ]
 
